tests/bad/tc5044-special_char_in_sub_class.vtt
WEBVTT

00:11.000 --> 00:13.000
We <i.class.&amp;>are</i> in New York City